@@ -1,5 +1,17 @@
 2011-12-03  Darin Adler  <darin@apple.com>
 
+        Use HashMap<OwnPtr> for ScriptSampleRecordMap
+        https://bugs.webkit.org/show_bug.cgi?id=73758
+
+        Reviewed by Andreas Kling.
+
+        * bytecode/SamplingTool.cpp:
+        (JSC::SamplingTool::notifyOfScope): Added adoptPtr.
+        (JSC::SamplingTool::dump): Added get.
+        * bytecode/SamplingTool.h: Changed the value type of ScriptSampleRecordMap to be OwnPtr.
+
+2011-12-03  Darin Adler  <darin@apple.com>
+
         Use HashMap<OwnPtr> for the opaqueJSClassData map
         https://bugs.webkit.org/show_bug.cgi?id=73759
 
